feat: add jwt check
