# internal/domain/auth/handler/auth_route.go
@@ -1,0 +1,7 @@
+package auth_handler
+
+func (h *authHandler) MapRoutes() {
+	h.r.Group("/auth").
+		POST("/login", h.Login).
+		POST("/register", h.Register)
+}
